--- a/src/main/resources/templates/administrator/login.html
+++ b/src/main/resources/templates/administrator/login.html
@@ -45,7 +45,7 @@
               <fieldset>
                 <legend>ログイン</legend>
                 <div class="form-group">
-                  <div class="alert alert-danger" th:if="${#fields.hasErrors('mailAddress') or #fields.hasErrors('password')}">
+                  <div class="alert alert-danger" th:if="${error}" th:text="${error}">
                     <p>メールアドレスまたはパスワードが間違っています</p>
                   </div>
                 </div>
