--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -105,7 +105,7 @@
                   <span th:text="${#dates.format(employee.hireDate, 'yyyy/MM/dd')}">2016/12/1</span>
                 </td>
                 <td>
-                  <span th:text="${employee.dependentsCount}">3人</span>
+                  <span th:text="${employee.dependentsCount + '人'}">3人</span>
                 </td>
               </tr>
             </tbody>
