入社日のフォーマット調整

--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -102,7 +102,7 @@
                   </a>
                 </td>
                 <td>
-                  <span th:text="${#dates.format(employee.hireDate, 'yyyy/MM/dd')}">2016/12/1</span>
+                  <span th:text="${#dates.format(employee.hireDate, 'yyyy-MM-dd')}">2016/12/1</span>
                 </td>
                 <td>
                   <span th:text="${employee.dependentsCount + '人'}">3人</span>
